Fix overflow on HP

--- a/app/assets/styles/_utils.scss
+++ b/app/assets/styles/_utils.scss
@@ -10,6 +10,8 @@ body {
 
 .content {
 	flex: 1 0 auto;
+	width: 100vw;
+	overflow-x: hidden;
 
 	> section {
 		position: relative;
